--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -12,7 +12,9 @@ not covered in this document.
 *******
 Purpose
 *******
-The purpose of rasty is...
+The purpose of rasty is to make pretty pictures. More seriously, it is
+to use procedurally generated patterns or pseudorandomness to create
+image data that can be used in either image or video files. 
 
 
 ***********************
@@ -20,7 +22,14 @@ Functional Requirements
 ***********************
 The following are the functional requirements for rasty:
 
-*   
+*   rasty can create grayscale or color images.
+*   rasty can generate still images or video.
+*   rasty has image sources that generate image data.
+*   rasty has distorters that modify image data.
+*   rasty has eases that modify the color curve of image data.
+*   rasty has blends that combine two sets of image data.
+*   rasty blends have masks that can change how much blending occurs
+    at each pixel in the image data.
 
 
 **********************
@@ -28,4 +37,5 @@ Technical Requirements
 **********************
 The following are the technical requirements for rasty:
 
-*   
+*   rasty outputs image data in array-like objects that can be saved
+    by the imgwriter package.
