Migrated tests_imggen.py to use pytest.

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,3 +10,14 @@ python_files = *
 rst_files = *
     docs/*
 unit_tests = tests
+
+
+[testenv]
+allowlist_externals = isort
+commands =
+    pytest {posargs: tests}
+    isort ./src/imggen --check-only --diff --skip .tox --lai 2 -m 3
+    isort ./tests --check-only --diff --skip .tox --lai 2 -m 3
+deps = -rrequirements.txt
+    pytest
+    pytest-mock
