--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,9 @@ pillow = "*"
 pycodestyle = "*"
 mypy = "*"
 rstcheck = "*"
+pytest = "*"
+pytest-mock = "*"
+imggen = {file = ".", editable = true}
 
 [requires]
 python_version = "3.9"
