--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ rstcheck = "*"
 pytest = "*"
 pytest-mock = "*"
 imggen = {file = ".", editable = true}
+types-pillow = "*"
 
 [requires]
 python_version = "3.9"
