--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ report_level = "WARNING"
 ignore_directives = ["autoclass", "autofunction"]
 
 [tool.pytest.ini_options]
-addopts = ["--import-mode=importlib",]
+# addopts = ["--import-mode=importlib",]
 markers = ['codec', 'ext', 'path',]
 
 [project]
