--- a/setup.cfg
+++ b/setup.cfg
@@ -12,6 +12,10 @@ rst_files = *
 unit_tests = tests
 
 
+[tox:tox]
+envlist = py39, py310, py311
+
+
 [testenv]
 allowlist_externals = isort
 commands =
