--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ rstcheck = "*"
 pytest = "*"
 pytest-mock = "*"
 types-pillow = "*"
+isort = "*"
+tox = "*"
 imggen = {file = ".", editable = true}
 
 [requires]
